# microsys

./: .gitignore  LICENSE  README.md  convert_logo.py  microsys_translation_analysis.md  microsys_translation_analysis.md.resolved  pyproject.toml  setup.py  temp_err.txt  temp_err2.txt  temp_err3.txt  temp_err4.txt  temp_err5.txt  test_permissions.py
microsys/: admin.py  api.py  apps.py  context_processors.py  discovery.py  fetcher.py  filters.py  forms.py  managers.py  md2docx_v4.py  models.py  patches.py  signals.py  tables.py  translations.py  urls.py  utils.py  views.py
microsys/formats/ar/: formats.py
microsys/formats/en/: formats.py
microsys/management/commands/: migrator.py
microsys/migrations/: 0001_initial.py  0002_alter_profile_options_alter_scope_options_and_more.py  0002_systemsettings_name_en_alter_systemsettings_name.py  0003_alter_profile_options_alter_useractivitylog_options.py  0004_alter_profile_options.py  0005_profile_is_2fa_enabled.py  0006_remove_profile_is_2fa_enabled_and_more.py  0007_profile_backup_codes.py  0008_useractivitylog_details.py
microsys/static/sidebar/: sidebar.css  sidebar.js
microsys/static/themes/: main.js
microsys/templates/includes/: titlebar.html
microsys/templatetags/: microsys_tags.py  microsys_translation.py  sidebar_tags.py
microsys/tests/: test_m2m.py  verify_detailed_logs.py
microsys/views/: __init__.py  activitylog.py  general.py  profile.py  scopes.py  sections.py  twofa.py  users.py
users/: apps.py  filters.py  forms.py  models.py  tables.py  views.py
users/migrations/: 0003_scope_alter_customuser_options_and_more.py
(+91 files in other folders)
